Fix text-align in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -38,5 +38,5 @@ section {
 
 .example, h3 {
   padding-top: 30px;
-  text-align center;
+  text-align: center;
 }
